5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3396/executions/1602_1017.log
== TEST (2019-03-25 19:06:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Longitude de P1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de P2: ")))
r=6371.01
d=r*(arcos*((sin*(t1))*sin(t2))+((cos(t1)*cos(t2)))

-- ERROR:
File "XXXX", line 11
    
                                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=6371.01
la1=float(input("la1:"))
lo1=float(input("lo1:"))
la2=float(input("la2:"))
lo2=float(input("lo2:"))
d=(r*arcos*((sin(la1)*sin(la2))+((cos*(la1))*(cos*(la2))*(cos*(lo1−lo2)))



-- ERROR:
File "XXXX", line 10
    d=(r*arcos*((sin(la1)*sin(la2))+((cos*(la1))*(cos*(la2))*(cos*(lo1−lo2)))
                                                                         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 19:20:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
r=6371.01
la1=float(input("la1:"))
lo1=float(input("lo1:"))
la2=float(input("la2:"))
lo2=float(input("lo2:"))




-- ERROR:
File "XXXX", line 10
    d=(r*arcos*((sin(la1)*sin(la2))+((cos*(la1))*(cos*(la2))*(cos*(lo1−lo2)))
                                                                         ^
SyntaxError: invalid character in identifier
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
